# buddle

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  rust-toolchain.toml
.cargo/: config
src/buddle/: Cargo.toml
src/buddle-bit-buf/: Cargo.toml
src/buddle-bit-buf/src/: lib.rs  reader.rs  util.rs  writer.rs
src/buddle-bytes-ext/: Cargo.toml
src/buddle-bytes-ext/src/: lib.rs
src/buddle-dml/: Cargo.toml
src/buddle-dml/spec/: Cargo.toml
src/buddle-dml/spec/src/: field.rs  lib.rs  protocol.rs  record.rs
src/buddle-dml/spec/tests/: TestProto.xml  proto_parsing.rs
src/buddle-dml/src/: access_level.rs  encoding.rs  lib.rs  message.rs  protocol.rs
src/buddle-ecs/: Cargo.toml
src/buddle-ecs/src/: entity.rs  lib.rs
src/buddle-math/: Cargo.toml
src/buddle-math/src/: euler.rs  geometry.rs  lib.rs
src/buddle-math/src/geometry/: point.rs  rect.rs  size.rs
src/buddle-net/: Cargo.toml
src/buddle-net/src/: codec.rs  control.rs  frame.rs  lib.rs
src/buddle-net/src/codec/: crypto.rs  decoder.rs  encoder.rs
src/buddle-nif/: Cargo.toml
src/buddle-nif/nifgen/: __init__.py  __main__.py  codegen.py  expr.py  predicates.py  types.py
src/buddle-nif/src/: basic.rs  bitfields.rs  bitflags.rs  compounds.rs  enums.rs  lib.rs  objects.rs  parse.rs
src/buddle-nif/src/compounds/: impls.rs  manual.rs
src/buddle-nif/src/objects/: impls.rs  manual.rs
src/buddle-nif/src/parse/: file.rs  misc.rs  string.rs  version.rs
src/buddle-object-property/: Cargo.toml
src/buddle-object-property/macros/: Cargo.toml
src/buddle-object-property/macros/src/: bitenum.rs  lib.rs  type.rs  utils.rs
src/buddle-object-property/macros/src/type/: ast.rs  attrs.rs
src/buddle-object-property/src/: container.rs  cpp.rs  enum.rs  impls.rs  lib.rs  path.rs  property_class.rs  registry.rs  serde.rs  type.rs  type_info.rs
src/buddle-object-property/src/cpp/: ptr.rs  strings.rs
src/buddle-object-property/src/serde/: de.rs  deserializer.rs  result.rs  ser.rs  serializer.rs  type_tag.rs
src/buddle-object-property/src/type_info/: cell.rs  class.rs  value.rs
src/buddle-object-property/src/type_info/class/: list.rs  property.rs
src/buddle-object-property/tests/: basic.rs  bits.rs  pointer.rs
src/buddle-render/: Cargo.toml
src/buddle-render/src/: camera.rs  gpu.rs  lib.rs  material.rs  model.rs  transform.rs
src/buddle-render/src/gpu/: abstract.rs  context.rs  descriptors.rs  render_buffer.rs  shader.rs  texture.rs
src/buddle-render/src/shaders/: flat_texture.wgsl  oit_composite.wgsl  oit_flat_texture.wgsl  screen.wgsl
src/buddle-types/: Cargo.toml  build.rs
src/buddle-types/impl/: Cargo.toml
src/buddle-types/impl/src/: codegen.rs  lib.rs  translation.rs  type_list.rs
src/buddle-types/src/: lib.rs
src/buddle-utils/: Cargo.toml
src/buddle-utils/src/: bitint.rs  color.rs  hash.rs  lib.rs  mem.rs
src/buddle-utils/tests/: hash.rs
src/buddle-wad/: Cargo.toml
src/buddle-wad/src/: archive.rs  crc.rs  interner.rs  lib.rs  parse.rs  types.rs
src/buddle-wad/tests/: archive.rs  read_data.rs
src/buddle/src/: controller.rs  loader.rs  main.rs
src/buddle/src/shaders/: flat_texture.wgsl
