[package]
name = "buddle-bit-buf"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Bit-level serialization and deserialization machinery"
license = "GPL-2.0"
edition = "2021"

[dependencies]
buddle-utils = { path = "../buddle-utils" }

anyhow = "1.0"
bitvec = "1.0"
funty = { version = "^2.0", default-features = false }
