[package]
name = "buddle-dml"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of the Data Management Layer for networking"
license = "GPL-2.0"
edition = "2021"

[dependencies]
buddle-bytes-ext = { path = "../buddle-bytes-ext" }
buddle-dml-spec = { path = "spec" }

anyhow = "1.0"
bytes = "1.4"
futures = "0.3"
