[package]
name = "buddle-ecs"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Entity Component System implementation for Buddle"
license = "GPL-2.0"
repository = "https://github.com/buddle-org/buddle.git"
edition = "2021"

[dependencies]
buddle-math = { path = "../buddle-math" }
buddle-object-property = { path = "../buddle-object-property" }
buddle-utils = { path = "../buddle-utils" }
