[package]
name = "buddle-math"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Linear algebra library for game maths"
license = "GPL-2.0"
repository = "https://github.com/buddle-org/buddle.git"
edition = "2021"

[dependencies]
glam = "0.22"
num-traits = "0.2"
