[package]
name = "buddle-render"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>", "Nikolas Wipper <nik.wipper@gmx.de>"]
license = "GPL-2.0"
repository = "https://github.com/buddle-org/buddle.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddle-math = { path = "../buddle-math" }
buddle-nif = { path = "../buddle-nif" }

bcndecode = "0.2.0"
bytemuck = { version = "1.8", features = ["derive"] }
log = "0.4"
pollster = "0.3"
raw-window-handle = "0.5"
wgpu = "0.15"
