[package]
name = "buddle-types"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Rust definitions of shared C++ types"
license = "GPL-2.0"
edition = "2021"

[dependencies]
buddle-object-property = { path = "../buddle-object-property" }

[build-dependencies]
anyhow = "1.0"
buddle-types-impl = { path = "impl" }
