[package]
name = "buddle"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>", "Nikolas Wipper <nik.wipper@gmx.de>"]
license = "GPL-2.0"
repository = "https://github.com/buddle-org/buddle.git"
edition = "2021"

[dependencies]
buddle-math = { path = "../buddle-math" }
buddle-net = { path = "../buddle-net" }
buddle-nif = { path = "../buddle-nif" }
buddle-render = { path = "../buddle-render" }
buddle-object-property = { path = "../buddle-object-property" }
buddle-wad = { path = "../buddle-wad" }

bcndecode = "0.2.0"
wgpu = "0.15"
winit = "0.28"
