[package]
name = "buddle-object-property-macros"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Procedural macros for buddle-object-property"
license = "GPL-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
