[package]
name = "buddle-types-impl"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Dynamic code generation of game type definitions"
license = "GPL-2.0"
edition = "2021"

[dependencies]
buddle-object-property = { path = "../../buddle-object-property" }
buddle-utils = { path = "../../buddle-utils" }

anyhow = "1.0"
heck = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
